// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XButton.vue block 1`] = `
<button
  class="x-button   x-button__ripple x-button__block"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue block 2`] = `
<button
  class="x-button   x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue create 1`] = `
<button
  class="x-button   x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue disabled 1`] = `
<button
  class="x-button   x-button__ripple x-button__disabled"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue disabled 2`] = `
<button
  class="x-button   x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue nativeType 1`] = `
<button
  class="x-button   x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue nativeType 2`] = `
<button
  class="x-button   x-button__ripple"
  type="submit"
>
  Button
</button>
`;

exports[`XButton.vue nativeType 3`] = `
<button
  class="x-button   x-button__ripple"
  type="reset"
>
  Button
</button>
`;

exports[`XButton.vue ripple 1`] = `
<button
  class="x-button   x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue ripple 2`] = `
<button
  class="x-button"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue round 1`] = `
<button
  class="x-button   x-button__ripple x-button__round"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue round 2`] = `
<button
  class="x-button   x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue small 1`] = `
<button
  class="x-button   x-button__ripple x-button__small"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue small 2`] = `
<button
  class="x-button   x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue stylus 1`] = `
<button
  class="x-button x-button__text  x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue stylus 2`] = `
<button
  class="x-button x-button__icon  x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue stylus 3`] = `
<button
  class="x-button x-button__outlined  x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue stylus 4`] = `
<button
  class="x-button x-button__contained  x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue stylus 5`] = `
<button
  class="x-button x-button__toggle  x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue type 1`] = `
<button
  class="x-button  x-button__flat x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`XButton.vue type 2`] = `
<button
  class="x-button  x-button__fab x-button__ripple"
  type="button"
>
  Button
</button>
`;
